--- a/guides/getting-started/running-tests.mdx
+++ b/guides/getting-started/running-tests.mdx
@@ -1,234 +1,220 @@
 ---
-title: "Building and Running Tests"
-description: "Covers how to compile, execute, and interpret the outcomes of your tests, including tips for different environments and debugging failed tests."
+title: "Running Tests & Interpreting Results"
+description: "Learn how to execute tests with GoogleTest, explore command-line options, interpret output, and understand test summary reports. Become proficient in monitoring test success and diagnosing failures."
 ---
 
-# Building and Running Tests
+# Running Tests & Interpreting Results
 
 ## Overview
-This guide helps you compile your test programs, execute them, and understand the results you get from running your tests with GoogleTest. Whether you're working on Linux, Windows, or macOS, this guide explains how to build your test binaries, run tests in various environments, and interpret success or failure outcomes effectively.
 
-By following this guide, you'll gain confidence running your tests consistently and diagnosing failures for quicker debugging.
+This guide will help you successfully execute your tests using GoogleTest, understand and interpret command-line options, analyze test output, and make sense of test summary reports. By mastering these skills, you will efficiently monitor your test success and quickly diagnose failures, improving your development and testing workflow.
 
 ---
 
-## 1. Compiling Your Test Programs
+## 1. Running your Test Executable
 
-GoogleTest provides flexible ways to build test programs that run your tests.
+GoogleTest tests are compiled into an executable. Running this executable will automatically execute all tests registered with GoogleTest in your binary.
 
 ### Prerequisites
-- You have your C++ test code ready, using `TEST()`, `TEST_F()`, or other GoogleTest macros.
-- Your build environment supports C++17 or later.
-- GoogleTest and GoogleMock source or pre-built libraries are accessible.
-- A C++ compiler configured for your platform (Linux, macOS, Windows).
+- Your tests must be compiled and linked properly, with GoogleTest libraries included.
+- Optionally, GoogleMock can be linked in when mock support is required.
+- Your test executable should be built via your build system or manually.
 
-### Steps to Compile
+### Basic Execution
+- Run the test executable from a command prompt or terminal.
+- By default, all tests will run, and output will be displayed to the console.
 
-1. **Set up Your Build System:** Use CMake, Bazel, or your preferred build system to include GoogleTest and GoogleMock.
-
-2. **Linking Tests:** Link your test code against `gtest` and optionally `gmock` libraries. For convenience, GoogleTest provides `gtest_main` and GoogleMock provides `gmock_main` which contain a pre-defined `main()` function that runs all tests.
-
-3. **Compile Examples:**
-
-   For CMake users, your `CMakeLists.txt` typically contains:
-   ```cmake
-   find_package(GTest REQUIRED)
-   add_executable(my_test my_test.cc)
-   target_link_libraries(my_test GTest::gtest_main GTest::gmock_main pthread)
-   add_test(NAME MyTest COMMAND my_test)
-   ```
-
-4. **Custom Main Functions:** If your tests require a customized `main()` function (for example, additional setup before running tests), define it as described in the GoogleTest Primer, then link only with `gtest` or `gmock` (without `_main`).
+```bash
+./your_test_executable
+```
 
 ### Expected Outcome
-A compiled executable test binary that contains your tests and can be run to perform testing.
+- Each test suite and test will be executed in sequence.
+- Output indicating test start, pass/fail status, and any failure messages will appear.
+- A final summary of all tests run, passed, or failed is printed.
+
+### Time Estimate
+This depends on the number of tests. Small test suites typically run instantaneously; larger test suites might take several seconds or minutes.
+
+### Difficulty Level
+Beginner
 
 ---
 
-## 2. Running Tests
+## 2. Understanding Command-Line Flags
 
-With your test binary ready, you can run it directly from the command line or within your IDE.
+GoogleTest supports a variety of command-line flags that allow you to customize test execution and reporting.
 
-### Basic Invocation
-Running the compiled test binary will automatically execute all registered tests.
+### Commonly Used Flags
+| Flag | Purpose | Example |
+| --- | --- | --- |
+| `--gtest_filter=` | Run only tests that match the pattern. | `--gtest_filter=MySuite.*` runs all tests in MySuite |
+| `--gtest_repeat=` | Repeat tests multiple times. | `--gtest_repeat=10` runs all tests 10 times |
+| `--gtest_break_on_failure` | Trigger debugger breakpoint on failure |
+| `--gtest_output=` | Output test results in XML or JSON format. | `--gtest_output=xml:report.xml` |
+| `--gtest_shuffle` | Run tests in random order |
+| `--gmock_verbose=` | Control verbosity of GoogleMock output (`info`, `warning`, `error`)
 
-```bash
-./my_test
-```
+### How to Use Flags
+Flags should be passed as arguments when running your test executable.
 
-### Test Output
-Upon execution, GoogleTest outputs a detailed summary:
-- Number of tests run
-- Which tests passed or failed
-- Detailed failure messages including file names, line numbers, and error messages
-
-### Return Codes
-- `0` means all tests passed successfully.
-- Non-zero means there were test failures or crashes.
-
-### Running Subset of Tests
-You can run specific tests using the `--gtest_filter` flag:
+Example:
 
 ```bash
-./my_test --gtest_filter=TestSuiteName.TestName
+./your_test_executable --gtest_filter=FactorialTest.* --gtest_repeat=3
 ```
 
-Wildcards like `*` are supported for filtering multiple tests.
-
-### Parallel and Repeat Runs
-For speed or debugging flaky tests:
-- Use external tools or scripts to run tests in parallel.
-- Use `--gtest_repeat=N` to run tests multiple times consecutively.
-
+### Verifying Flags
+Invalid flags or unsupported values will cause the test executable to print an error and exit.
 
 ---
 
-## 3. Interpreting Test Results and Common Scenarios
+## 3. Understanding Test Output
 
-This section guides you on understanding what test results mean and how to act accordingly.
+GoogleTest produces detailed output during test execution. Understanding this output helps you know which tests passed, which failed, and why.
 
-### Successful Tests
-- Output ends with `PASSED` message.
-- Exit code is 0.
+### Typical Output Format
 
-### Failed Tests
-- GoogleTest prints details of failures including the assertion that failed, file, and line.
-- If failures occur, subsequent tests run normally unless fatal failures cause aborting of the current test.
-
-### Crash or Fatal Errors
-- If a test crashes or hits a fatal failure (`ASSERT_*` macro failure), it aborts the current test function.
-- GoogleTest continues to run remaining tests unless the failure occurs during global setup or teardown.
-
-<Tip>
-Use the detailed failure output to pinpoint the exact condition and location causing the failure.
-</Tip>
-
-### Using Verbose Output
-Run tests with verbosity for more detailed diagnostics:
-
-```bash
-./my_test --gtest_verbose=info
-```
-
-This helps during debugging or when integrating tests into CI.
-
-### Debugging Failed Tests
-
-- **Isolate a test:** Run a failing test in isolation using `--gtest_filter`.
-- **Use debuggers:** Run the test executable within a debugger to inspect failure behavior.
-- **Check setup/teardown:** Failures in `SetUp()` or `TearDown()` can cause issues; validate these methods.
-
----
-
-## 4. Advanced Execution Controls
-
-GoogleTest offers flags for fine-tuning test execution.
-
-### Common Test Runner Flags
-- `--gtest_repeat=<N>`: Run all tests N times.
-- `--gtest_shuffle`: Run tests in random order (good for finding inter-test dependencies).
-- `--gtest_break_on_failure`: Pause on failure for debugging.
-- `--gtest_output=<format>:<file>`: Output results in XML or JSON for CI consumption.
-
-### Integration in CI Pipelines
-- Generate XML reports to feed into CI dashboards.
-- Use filters to run only changed tests or specific suites.
-
----
-
-## 5. Troubleshooting Common Issues
-
-### Tests Don't Run or Are Missing
-- Verify tests are defined with `TEST()`, `TEST_F()`, or other GoogleTest macros.
-- Confirm linking against the correct GoogleTest library (`gtest_main` or `gmock_main` if no custom main).
-
-### Linker Errors
-- Check libraries are linked in the correct order.
-- On Windows, ensure correct runtime libraries are used consistently.
-
-### Tests Run but Always Succeed or Fail Unexpectedly
-- Verify your assertions are correctly written.
-- Check that initialization code in fixtures or `main()` calls `InitGoogleTest()` properly.
-
-### Output is Too Verbose or Confusing
-- Use filtering options to limit output.
-- Adjust verbosity flags.
-
----
-
-## 6. Example: Build and Run a Basic Test Program
-
-### Given
-File `factorial_test.cc`:
-
-```c++
-#include <gtest/gtest.h>
-
-int Factorial(int n) {
-  return (n <= 1) ? 1 : n * Factorial(n - 1);
-}
-
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-
-TEST(FactorialTest, HandlesPositiveInput) {
-  EXPECT_EQ(Factorial(1), 1);
-  EXPECT_EQ(Factorial(2), 2);
-  EXPECT_EQ(Factorial(3), 6);
-}
-
-int main(int argc, char **argv) {
-  ::testing::InitGoogleTest(&argc, argv);
-  return RUN_ALL_TESTS();
-}
-```
-
-### Compile
-```bash
-g++ factorial_test.cc -lgtest -lgtest_main -pthread -o factorial_test
-```
-
-### Run
-```bash
-./factorial_test
-```
-
-### Sample Output
-```
-[==========] Running 2 tests from 1 test suite.
-[----------] Global test environment set-up.
-[----------] 2 tests from FactorialTest
+```text
 [ RUN      ] FactorialTest.HandlesZeroInput
 [       OK ] FactorialTest.HandlesZeroInput (0 ms)
 [ RUN      ] FactorialTest.HandlesPositiveInput
-[       OK ] FactorialTest.HandlesPositiveInput (0 ms)
-[----------] 2 tests from FactorialTest (0 ms total)
+/path/to/test.cc:45: Failure
+Expected equality of these values:
+  Factorial(2)
+    Which is: 3
+  2
+[  FAILED  ] FactorialTest.HandlesPositiveInput (1 ms)
+[----------] 2 tests from FactorialTest (1 ms total)
+[==========] 2 tests from 1 test suite ran. (1 ms total)
+[  PASSED  ] 1 test.
+[  FAILED  ] 1 test, listed below:
+[  FAILED  ] FactorialTest.HandlesPositiveInput
 
-[----------] Global test environment tear-down
-[==========] 2 tests from 1 test suite ran. (0 ms total)
-[  PASSED  ] 2 tests.
+ 1 FAILED TEST
+```
+
+### Key Sections
+- `[ RUN      ]` - indicates a test started running
+- `[       OK ]` - test passed
+- `[  FAILED  ]` - test failed, with optional failure details
+- Test suite summary and overall run summary
+
+### Diagnosing Failures
+- Failure message includes file and line number
+- Expected vs actual values are shown
+- Multiple failures in a test are reported individually
+
+### Best Practices
+- Use the output to quickly locate failed tests and the exact assertions that failed
+- Use line numbers in failure output to jump directly to problematic code
+- Be aware that GoogleTest continues running other tests even after failures
+
+---
+
+## 4. Interpreting the Test Summary Report
+
+At the end of a test run, GoogleTest prints a summary indicating total tests run and their outcomes.
+
+### Elements of the Summary
+| Element | Meaning |
+| --- | --- |
+| `[==========]` | Total tests run and total time
+| `[  PASSED  ]` | Number of tests passed
+| `[  FAILED  ]` | Number of tests failed and list of failed tests
+
+### Example
+```text
+[==========] 100 tests from 10 test suites ran. (20 ms total)
+[  PASSED  ] 98 tests.
+[  FAILED  ] 2 tests, listed below:
+[  FAILED  ] MySuite.TestCase1
+[  FAILED  ] OtherSuite.TestCaseA
+
+ 2 FAILED TESTS
+```
+
+### How to Act on the Summary
+- Focus on `[  FAILED  ]` list to investigate problems
+- Use `--gtest_filter` to re-run only failing tests
+- Adjust tests or code based on diagnostic failure output
+
+---
+
+## 5. Practical Tips & Common Pitfalls
+
+- **Always set expectations before running test code involving mocks.**
+- **Use `--gtest_filter` to isolate and repeatedly run failing tests for efficient debugging.**
+- **Be cautious of flaky tests caused by shared global state; tests should be independent.**
+- **Enable `--gmock_verbose=info` for detailed mock call tracing when debugging mocks.**
+- **Remember that GoogleTest continues running all tests by default even if some tests fail—use `--gtest_break_on_failure` for breakpoint debugging.**
+- **Leverage output XML/JSON reports for integration with CI systems and test dashboards.**
+
+---
+
+## 6. Example: Running and Filtering Tests
+
+Suppose you have the following tests:
+
+```cpp
+TEST(FactorialTest, HandlesZeroInput) { EXPECT_EQ(Factorial(0), 1); }
+TEST(FactorialTest, HandlesPositiveInput) { EXPECT_EQ(Factorial(2), 2); }
+TEST(StringTest, ReturnsEmptyString) { EXPECT_EQ(GetString(), ""); }
+```
+
+Run only the factorial tests:
+
+```bash
+./your_test_executable --gtest_filter=FactorialTest.*
+```
+
+Repeat the factorial tests 5 times (for flaky test detection):
+
+```bash
+./your_test_executable --gtest_filter=FactorialTest.* --gtest_repeat=5
+```
+
+Enable verbose mock output:
+
+```bash
+./your_test_executable --gmock_verbose=info
 ```
 
 ---
 
-## 7. Next Steps
+## 7. Troubleshooting Common Issues
 
-- Explore running tests with GoogleMock for mocking abilities.
-- Use `--gtest_filter` to target specific suites or tests during development.
-- Learn about test fixtures to reuse common test setup.
-- Integrate GoogleTest with your continuous integration system using XML outputs.
+| Issue | Cause | Solution |
+| --- | --- | --- |
+| Test executable runs but no tests executed | Tests are not linked or registered properly | Ensure source/test files are included in build; use `TEST()` macros correctly |
+| Unexpected test failures without clear reasons | Mocks called without expectation; insufficient `EXPECT_CALL`s | Set expectations before exercising mocks; use `NiceMock` to suppress warnings |
+| Tests run slowly or hang | Deadlocks in tests, repeated retries without limits | Use `--gtest_break_on_failure`, log with `--gmock_verbose=info`; optimize tests |
+| Difficulty finding failure points | Large output; hard to identify failed tests | Use `--gtest_filter` to isolate failures; use IDE integration for navigating failures |
 
-For more information, see the [GoogleTest Primer](primer.md), [GoogleMock documentation](googlemock/README.md), and [Running & Validating Tests](getting-started/first-test-validation/running-and-validating-tests).
+<Tip>
+Run the test executable with `--gtest_help` to see all available command-line flags.
+</Tip>
+
+---
+
+## 8. Next Steps
+
+- Explore the [Writing Your First Test](../getting-started/first-run-usage/writing-first-test) guide to start writing GoogleTest tests.
+- Learn [Creating and Using Mocks](../guides/mocking-and-advanced-techniques/creating-and-using-mocks) to enhance testing with mocks.
+- For CI integration, use the XML output options (`--gtest_output=xml:path`) for tools like Jenkins.
+- Consult the [Troubleshooting & Quick Validation](../getting-started/first-run-usage/troubleshooting-quick-validation) guide for resolving common setup issues.
 
 ---
 
 ## References
-- [GoogleTest Primer](primer.md)
-- [Running & Validating Tests Guide](getting-started/first-test-validation/running-and-validating-tests)
-- [GoogleMock Overview](googlemock/README.md)
-- [Assertions Reference](reference/assertions.md)
 
-<Note>
-To maximize test reliability and maintainability, always check your test return codes in your build and CI setups and avoid calling `RUN_ALL_TESTS()` more than once in the same program.
-</Note>
+- GoogleTest Primer: https://github.com/google/googletest/blob/main/docs/primer.md
+- GoogleMock for Dummies: https://github.com/google/googletest/blob/main/docs/gmock_for_dummies.md
+- GoogleMock Cookbook: https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md
+- GoogleTest Command Line Flags: https://github.com/google/googletest/blob/main/docs/advanced.md#running-tests-with-command-line-flags
+
+---
+
+*Last updated for GoogleTest version on branch 'main'.*
+
+---
