--- a/guides/mocking-and-advanced-techniques/creating-and-using-mocks.mdx
+++ b/guides/mocking-and-advanced-techniques/creating-and-using-mocks.mdx
@@ -1,340 +1,321 @@
 ---
 title: "Creating and Using Mocks"
-description: "Learn how to define and use mock objects using GoogleMock, including setting expectations, specifying behaviors, and verifying interactions. Ideal for testing code that depends on external systems or abstractions."
+description: "Step-by-step instructions for defining mock classes, using EXPECT_CALL and ON_CALL for behavior specification, and controlling mock object strictness. Perfect for users needing to isolate and validate C++ components."
 ---
 
 # Creating and Using Mocks
 
-Learn how to define and use mock objects using GoogleMock, including setting expectations, specifying behaviors, and verifying interactions. Ideal for testing code that depends on external systems or abstractions.
+This guide will empower you to define mock classes, set up expectations with `EXPECT_CALL`, specify default behaviors with `ON_CALL`, and control how strictly your mocks enforce their contracts. Ideal for C++ developers seeking to isolate components and validate interactions within their code.
 
 ---
 
-## Introduction
+## 1. Understanding Mock Classes
 
-Mock objects are essential for unit testing in C++. They allow you to simulate the behavior of complex or external systems and verify interactions without depending on the real objects. This guide focuses exclusively on the practical workflow of creating and using mocks with GoogleMock.
+Mock classes simulate the behavior of real objects by implementing the same interface but allowing detailed control over interactions and returned values. GoogleMock uses the `MOCK_METHOD` macro to declare mock methods inside your mock class.
 
-You will learn how to:
+### Defining a Mock Class
 
-- Define mock classes and methods
-- Set expectations on mock method calls
-- Specify behaviors and return values
-- Verify that your code interacts with mocks as expected
-
-By mastering these techniques, you can effectively isolate your code under test, simulate edge cases, and write robust, maintainable tests.
-
----
-
-## Prerequisites
-
-Before proceeding, ensure you have:
-
-- GoogleMock integrated into your project and `<gmock/gmock.h>` included.
-- Familiarity with C++ virtual functions and interfaces.
-- Basic knowledge of unit testing concepts.
-
-For integration, setup, and initial configuration, see the [Initial Configuration Guide](../getting-started/setup-requirements-installation/initial-configuration).
-
----
-
-## Defining Mock Classes
-
-### Step 1: Create a Mock Class Derived from an Interface or Base Class
-
-Your mock class must inherit from the interface or base class you want to mock. Each virtual method to be mocked is declared using the `MOCK_METHOD` macro inside the public section of your mock class.
-
-**Important:**
-- Always declare mock methods in the `public:` section regardless of the original method's access level.
-- If mocking a `const`, `noexcept`, overloaded, or templated method, use the appropriate qualifiers in `MOCK_METHOD`.
-
-### Syntax of MOCK_METHOD
-
-```cpp
-class MockClass : public RealClassOrInterface {
- public:
-  MOCK_METHOD(ReturnType, MethodName, (Args...), (Qualifiers));
-};
-```
-
-- `ReturnType`: the return type of the method.
-- `MethodName`: the name of the method being mocked.
-- `Args...`: the argument types in parentheses. Wrap types containing commas with an extra set of parentheses or use type aliases.
-- `Qualifiers`: optional method qualifiers, e.g., `const`, `override`, `noexcept`.
-
-### Examples:
-
-```cpp
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, GoTo, (int x, int y), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-  MOCK_METHOD(int, GetY, (), (const, override));
-};
-```
-
-```cpp
-// Handling return types or argument types with commas
-using BoolIntPair = std::pair<bool, int>;
-class MockFoo {
- public:
-  MOCK_METHOD(BoolIntPair, GetPair, ());
-  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-};
-```
-
-### Additional Notes
-
-- To mock overloaded methods, define each overload with the proper signature using `MOCK_METHOD`.
-- To mock non-virtual methods, use dependency injection and templates as per advanced techniques (see gMock Cookbook).
-
----
-
-## Using Mock Objects in Tests
-
-### Step 2: Create Mock Object Instances
-
-Instantiate your mock class in your test code just like a regular object.
-
-```cpp
-MockTurtle mock_turtle;
-```
-
-### Step 3: Set Expectations Using `EXPECT_CALL`
-
-`EXPECT_CALL` specifies that a mock method is expected to be called, optionally with argument matchers, call counts, sequences, and behaviors.
-
-General syntax:
-
-```cpp
-EXPECT_CALL(mock_object, MethodName(matches...))
-    .Times(cardinality?)
-    .InSequence(sequences...)?
-    .After(expectations...)?
-    .WillOnce(action)...
-    .WillRepeatedly(action)?
-    .RetiresOnSaturation()?
-    ;
-```
-
-- Use argument matchers like `_` (wildcard), `Eq(value)`, `Ge(value)`, etc., to specify expected argument values.
-- Use `Times()` to specify how many times the call is allowed.
-- Use `WillOnce()` and `WillRepeatedly()` to specify the return values or behaviors.
-
-### Examples:
-
-```cpp
-using ::testing::AtLeast;
-using ::testing::Return;
-
-EXPECT_CALL(mock_turtle, PenDown()).Times(AtLeast(1));
-
-EXPECT_CALL(mock_turtle, GetX())
-    .WillOnce(Return(100))
-    .WillOnce(Return(150))
-    .WillRepeatedly(Return(200));
-
-EXPECT_CALL(mock_turtle, GoTo(50, _));  // expects x=50, y=anything
-```
-
-### Ordering and Sequences
-
-To enforce call order, use `InSequence`:
-
-```cpp
-using ::testing::InSequence;
-{
-  InSequence seq;
-  EXPECT_CALL(mock, Start());
-  EXPECT_CALL(mock, Execute());
-  EXPECT_CALL(mock, Finish());
-}
-```
-
-Alternatively, use named sequences:
-
-```cpp
-using ::testing::Sequence;
-Sequence seq1, seq2;
-EXPECT_CALL(mock, FirstCall()).InSequence(seq1);
-EXPECT_CALL(mock, SecondCall()).InSequence(seq1, seq2);
-EXPECT_CALL(mock, ThirdCall()).InSequence(seq2);
-```
-
-You can also specify that a call happens after one or more expectations with `After()`.
-
-### Specifying Behavior
-
-- Use `WillOnce(action)` to specify actions or return values for specific calls, in order.
-- Use `WillRepeatedly(action)` to specify the behavior for calls after all `WillOnce`s are exhausted.
-- Built-in actions include `Return(value)`, `ReturnRef(variable)`, `Invoke(function_or_lambda)`, `SetArgPointee<N>(value)`, and more.
-
----
-
-## Setting Default Behavior with ON_CALL
-
-`ON_CALL` specifies the behavior for a mock method but does *not* set an expectation that it will be called.
-
-Syntax:
-
-```cpp
-ON_CALL(mock_obj, Method(matchers...))
-    .WillByDefault(action);
-```
+- Inherit from the interface or base class you want to mock.
+- Declare each virtual method to be mocked using `MOCK_METHOD` in the `public:` section.
+- Include any qualifying specifiers (like `const`, `override`, or `noexcept`) in the macro.
 
 Example:
 
 ```cpp
-ON_CALL(mock_turtle, GetX()).WillByDefault(Return(10));
+#include <gmock/gmock.h>
+
+class Interface {
+ public:
+  virtual ~Interface() = default;
+  virtual int GetValue() const = 0;
+  virtual void SetValue(int value) = 0;
+};
+
+class MockInterface : public Interface {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const, override));
+  MOCK_METHOD(void, SetValue, (int value), (override));
+};
 ```
 
-Use `ON_CALL` to set up common default behavior shared across multiple tests, and reserve `EXPECT_CALL` to specify what must happen in the test.
+<Tip>
+Always place `MOCK_METHOD` declarations in the `public:` section, even if the original method is not public. This ensures that GoogleMock can access them for expectation and behavior specification.
+</Tip>
 
----
+### Dealing with Complex Types
 
-## Managing Uninteresting Calls
-
-Calls to mock methods without an `EXPECT_CALL` are 'uninteresting calls'. By default, GoogleMock issues warnings for such calls.
-
-Suppress warnings by:
-
-- Using `NiceMock<MockClass>` to make mock objects "nice", which suppresses warnings on uninteresting calls.
-- Adding a catch-all `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` when you expect calls but don't care about arguments.
-
-Use `StrictMock<MockClass>` to treat uninteresting calls as errors.
-
----
-
-## Tips and Best Practices
-
-- **Declare Expectations Before Exercising the Mock:** `EXPECT_CALL` must be set before calling the method.
-- **Use Argument Matchers Smartly:** Use `_` for arguments you don't care about to avoid brittle tests.
-- **Prefer ON_CALL for Default Behavior:** Avoid excessive `EXPECT_CALL`s; use `ON_CALL` to specify common default behavior.
-- **Sequence Expectations Carefully:** When order matters, use `InSequence` or `After` clauses explicitly.
-- **Avoid Over-Specification:** Overly strict expectations can make tests fragile; focus on verifying essential interactions.
-- **Use RetiresOnSaturation When Needed:** To allow expectations to become inactive once they are fulfilled.
-
----
-
-## Troubleshooting
-
-### Common Issues
-
-- **Mock Methods Not Called or Called Unexpectedly:** Ensure `EXPECT_CALL` is set before the call and arguments match.
-- **Warnings on Uninteresting Calls:** Use `NiceMock` or catch-all expectations.
-- **Compilation Errors with `MOCK_METHOD` and Commas:** Wrap argument types containing commas in extra parentheses or use type aliases.
-- **Mocking Non-Virtual Methods:** Use dependency injection or templating techniques as mocking non-virtual methods directly is not supported.
-
-### Verifying Mock Expectations
-
-Expectations are automatically checked when a mock object is destroyed. To verify earlier, use:
+If your method's return or argument types contain commas (e.g., `std::pair<int, int>`), wrap those types with extra parentheses or use a `using` alias to avoid macro parsing issues.
 
 ```cpp
-using ::testing::Mock;
-
-ASSERT_TRUE(Mock::VerifyAndClearExpectations(&mock_object));
+using PairInt = std::pair<int, int>;
+MOCK_METHOD(PairInt, GetPair, ());
 ```
 
 ---
 
-## Example Walkthrough
+## 2. Setting Expectations with EXPECT_CALL
+
+Use `EXPECT_CALL` to specify how your mock method is expected to be called during a test.
+
+### Basic Syntax
+
+```cpp
+EXPECT_CALL(mock_object, MethodName(matchers...))
+    .Times(cardinality)
+    .WillOnce(action)
+    .WillRepeatedly(action);
+```
+
+- **mock_object**: The mock instance.
+- **MethodName**: The mock method name.
+- **matchers**: Argument matchers that define what arguments are expected (use `_` for "any").
+- **Times()**: How many times the method may be called (e.g., `Times(1)`, `Times(AnyNumber())`).
+- **WillOnce() and WillRepeatedly()**: Actions the mock performs when called.
+
+### Example
+
+```cpp
+using ::testing::_;
+using ::testing::Return;
+
+MockInterface mock;
+
+EXPECT_CALL(mock, GetValue())
+    .Times(3)
+    .WillOnce(Return(10))
+    .WillOnce(Return(20))
+    .WillRepeatedly(Return(30));
+
+// Usage will return 10, then 20, and 30 thereafter
+```
+
+### Important Clauses
+
+- `.With()`: Apply a matcher to all arguments as a tuple.
+- `.InSequence()`: Enforce call order.
+- `.After()`: Define prerequisite calls.
+- `.RetiresOnSaturation()`: Deactivate expectation after it is fulfilled.
+
+<Tip>
+If you omit `.Times()`, GoogleMock infers the expected call count based on your `WillOnce` and `WillRepeatedly` clauses. For example, if you specify two `WillOnce` actions, `.Times(2)` is inferred.
+</Tip>
+
+### Notes on Ordering
+
+- Expectations are evaluated in reverse order, so the last matching `EXPECT_CALL` takes precedence.
+- To require calls to occur in specific order, use `InSequence` or the `After` clause.
+
+---
+
+## 3. Specifying Default Behavior with ON_CALL
+
+`ON_CALL` sets what should happen when the mock method is called but does *not* set an expectation that it must be called.
+
+### Basic Syntax
+
+```cpp
+ON_CALL(mock_object, MethodName(matchers...))
+    .With(multi_argument_matcher) // optional
+    .WillByDefault(action);       // required
+```
+
+- `WillByDefault()` defines the default behavior when no matching `EXPECT_CALL` is found.
+
+### Example
+
+```cpp
+using ::testing::_;
+using ::testing::Return;
+
+MockInterface mock;
+
+ON_CALL(mock, GetValue())
+    .WillByDefault(Return(42));
+
+// Now, if you call mock.GetValue() without any expectation,
+// it returns 42.
+```
+
+<Tip>
+Use `ON_CALL` mainly in test fixture setup to define general default mock behavior. Use `EXPECT_CALL` to verify specific call behaviors and counts.
+</Tip>
+
+---
+
+## 4. Controlling Mock Object Strictness
+
+GoogleMock provides three wrappers to control how strictly uninteresting calls (calls without matching expectations) are treated.
+
+| Mock Wrapper          | Behavior on uninteresting calls                      |
+|----------------------|----------------------------------------------------|
+| `NiceMock<T>`        | Suppresses warnings for uninteresting calls.       |
+| `NaggyMock<T>`       | Prints warnings (default behavior).                 |
+| `StrictMock<T>`      | Treats uninteresting calls as failures.             |
+
+### Usage Example
+
+```cpp
+using ::testing::NiceMock;
+using ::testing::StrictMock;
+
+NiceMock<MockInterface> nice_mock;    // Will ignore unexpected calls
+StrictMock<MockInterface> strict_mock; // Will fail on unexpected calls
+```
+
+<Tip>
+Choose the mock strictness based on your testing needs. While `StrictMock` helps catch unintended calls, it can make tests brittle. `NiceMock` reduces noise but should be used thoughtfully.
+</Tip>
+
+---
+
+## 5. Practical Workflow for Using Mocks
+
+<Steps>
+<Step title="Define your mock class">
+Derive a class from your interface and use `MOCK_METHOD` to declare mock methods.
+</Step>
+<Step title="Create mock objects in your tests">
+Instantiate your mock class (or use strict/nice wrappers as needed).
+</Step>
+<Step title="Set default behaviors with ON_CALL">
+Set common mock method behaviors, typically in your test fixture or setup function.
+</Step>
+<Step title="Set expectations with EXPECT_CALL">
+Specify how your tests expect the mock methods to be called, including argument matchers, cardinalities, and actions.
+</Step>
+<Step title="Exercise your code">
+Run code that uses the mock object.
+</Step>
+<Step title="Verify and clean up">
+GoogleMock automatically verifies expectations on mock destruction. You can also manually verify and clear expectations.
+</Step>
+</Steps>
+
+---
+
+## 6. Examples
+
+### Simple Mock Class and Usage
 
 ```cpp
 #include <gmock/gmock.h>
 #include <gtest/gtest.h>
 
-using ::testing::Return;
-using ::testing::_;
-using ::testing::InSequence;
-
-class Turtle {
+class Interface {
  public:
-  virtual ~Turtle() = default;
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void GoTo(int x, int y) = 0;
+  virtual ~Interface() = default;
+  virtual int Compute(int x) const = 0;
 };
 
-class MockTurtle : public Turtle {
+class MockInterface : public Interface {
  public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, GoTo, (int x, int y), (override));
+  MOCK_METHOD(int, Compute, (int x), (const, override));
 };
 
-TEST(DrawingTest, DrawLine) {
-  MockTurtle turtle;
+TEST(ExampleTest, BasicMockUsage) {
+  MockInterface mock;
 
-  {
-    InSequence s;
-    EXPECT_CALL(turtle, PenDown());
-    EXPECT_CALL(turtle, GoTo(100, 100));
-    EXPECT_CALL(turtle, PenUp());
-  }
+  ON_CALL(mock, Compute(_))
+      .WillByDefault(testing::Return(10));
 
-  // Code under test goes here, which uses 'turtle'.
-  turtle.PenDown();
-  turtle.GoTo(100, 100);
-  turtle.PenUp();
+  EXPECT_CALL(mock, Compute(5))
+      .Times(1)
+      .WillOnce(testing::Return(15));
+
+  // Will return 15 as per EXPECT_CALL
+  int result1 = mock.Compute(5);
+  EXPECT_EQ(result1, 15);
+
+  // Returns default 10 as per ON_CALL
+  int result2 = mock.Compute(7);
+  EXPECT_EQ(result2, 10);
 }
 ```
 
-This test ensures that `PenDown()` is called before moving the turtle and lifting the pen, in order.
+### Using NiceMock to Suppress Warnings
 
----
+```cpp
+using ::testing::NiceMock;
 
-## Next Steps & Related Content
+NiceMock<MockInterface> nice_mock;
 
-After mastering mock creation and usage, explore these topics:
+EXPECT_CALL(nice_mock, Compute(7)).WillOnce(testing::Return(20));
 
-- [Custom Actions and Matchers](../guides/mocking-and-advanced-techniques/actions-and-matchers) for extending mocks
-- [Advanced Mocking Patterns and Tips](../guides/mocking-and-advanced-techniques/advanced-mocking-patterns) for patterns
-- [Mocking Reference](../docs/reference/mocking) for full API details
-- [gMock Cookbook](../docs/gmock_cook_book) for practical recipes
-
-For overall testing workflows, see [Organizing Tests and Test Suites](../guides/core-testing-workflows/test-organization-best-practices).
-
----
-
-## Summary Diagram
-
-```mermaid
-sequenceDiagram
-    participant Test as Test Code
-    participant Mock as Mock Object
-
-    Test->>Mock: Create mock instance
-    Test->>Mock: EXPECT_CALL(mock.Method(args))
-    Test->>SUT: Exercise code with mock
-    SUT->>Mock: mock.Method(args) calls
-    Mock-->>Test: Verify calls and return actions
-    Test->>Mock: (Optional) VerifyAndClearExpectations
+// Calling Compute with unexpected value won't print warnings
+int value = nice_mock.Compute(42);
 ```
 
-This flow shows the typical interaction between your test, mock objects, and the system under test.
+### Sequence Expectations
+
+```cpp
+using ::testing::InSequence;
+
+TEST(SequenceTest, EnforcesCallOrder) {
+  MockInterface mock;
+  InSequence seq;
+
+  EXPECT_CALL(mock, Compute(1));
+  EXPECT_CALL(mock, Compute(2));
+
+  mock.Compute(1);  // OK
+  mock.Compute(2);  // OK
+}
+```
 
 ---
 
-<Tip>
-Remember to always place `EXPECT_CALL` statements before exercising the mock methods to ensure correct behavior verification.
-</Tip>
+## 7. Troubleshooting & Tips
 
-<Note>
-Use `ON_CALL` to specify default mock method behaviors without setting call expectations.
-</Note>
+### Common Issues
 
-<Warning>
-Be cautious with over-constraining expectations; it can make tests brittle and harder to maintain.
-</Warning>
+- **Uninteresting call warnings:** If you see warnings about uninteresting mock calls, consider whether the calls are expected. Use `NiceMock` to suppress if appropriate, or add `EXPECT_CALL(...).Times(AnyNumber())`.
+- **Unexpected call errors:** Occur when a call is made but no `EXPECT_CALL` matches the arguments.
+- **Mock method not called:** Verify that your code exercised the mock and that expectations are properly specified before the code runs.
+- **Mock methods not overriding base class:** Ensure methods are `virtual` and that `MOCK_METHOD` includes `(override)`.
+
+### Best Practices
+
+- Define clear and minimal expectations to avoid brittle tests.
+- Use argument matchers like `_` or custom matchers to relax argument constraints.
+- Use `.RetiresOnSaturation()` to avoid “sticky” expectations staying active after use.
+- Wrap expectations in `InSequence` for strict call order when required.
+- Use `ON_CALL` for default mock behaviors shared across tests.
+
+### Performance Considerations
+
+- Move mock class constructors and destructors to `.cc` files to reduce compilation time in large projects.
+- Avoid excessive or overly complex expectations.
 
 ---
 
-## Resources
+## 8. Next Steps & Related Content
 
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
-- [Using Mocks in Tests](https://google.github.io/googletest/gmock_for_dummies.html#using-mocks-in-tests)
+### What’s Next?
+
+- Start applying mocks in your unit tests for dependency isolation and precise interaction verification.
+- Explore advanced features like custom matchers and actions.
+- Familiarize yourself with test organization and parameterized testing to scale your testing efforts.
+
+### Related Guides
+
+- [Writing Your First Test & Mock](/getting-started/first-run-usage/writing-first-test)
+- [Using Matchers for Powerful Validations](/guides/core-testing-patterns/using-matchers)
+- [Mocking Best Practices & Death Tests](/guides/mocking-and-advanced-techniques/best-practices-and-death-tests)
+- [Troubleshooting & Quick Validation](/getting-started/first-run-usage/troubleshooting-quick-validation)
+
+### Resources
+
+- Official GoogleMock documentation: https://google.github.io/googletest/gmock_for_dummies.html
+- GoogleTest repository on GitHub: https://github.com/google/googletest
 
 ---
 
-By following this guide, you can gain full confidence in defining and using mocks effectively in your C++ unit tests with GoogleMock.
+## 9. Additional Tips
+
+- Use `Mock::VerifyAndClearExpectations(&mock_obj);` to manually verify mock expectations early if needed.
+- To avoid memory leaks failing your tests, enable heap checker or use smart pointers for mock objects.
+- Remember that expectations must be set before the calls to the mocks occur.
+
+---
+
+By following this guide, you will be equipped to create meaningful mock classes, specify exact or flexible call expectations, and manage mock object strictness to achieve robust, maintainable, and scalable C++ tests.
